--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,12 @@ language:
   ruby
 
 rvm:
-  - '1.8.7'
   - '1.9.3'
   - '2.0.0'
   - '2.1.1'
 
 script:
-  bundle exec rake spec 
+  bundle exec rspec spec/*.rb 
   
 before_install:
   - sudo apt-get update -qq
