--- a/.travis.yml
+++ b/.travis.yml
@@ -2,13 +2,10 @@ language:
   ruby
 
 rvm:
-  - '1.9.3'
-  - '2.0.0'
-  - '2.1.1'
   - '2.3.1'
-
+  - '2.4'
 script:
-  bundle exec rspec spec/*.rb 
+  bundle exec rake
   
 before_install:
   - sudo apt-get update -qq
